# bidur

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_mcp_server.py
.github/workflows/: ci.yml
demo/: Dockerfile  app.py  requirements.txt
docker/: .env.example  Dockerfile.form  Dockerfile.mcp  docker-compose.yml
examples/: mcp_sse_example.py
src/gen_ui/: __init__.py  config.py  orchestrator.py  tracing.py
src/gen_ui/agents/: __init__.py  field_analyzer.py  instructions.py  schema_generator.py  validator.py
src/gen_ui/guardrails/: __init__.py  constants.py  input_guardrails.py  output_guardrails.py
src/gen_ui/mcp_server/: __init__.py  server.py  session_store.py  tools.py
src/gen_ui/models/: __init__.py  field_definitions.py  schema_output.py  validation_result.py
src/gen_ui/tools/: __init__.py  schema_tools.py  user_input_tool.py  validation_tools.py
tests/: __init__.py  test_models.py
ui/html/: form.css  form.js  index.html  server.py
